optimize build.sbt