@@ -5,24 +5,8 @@ lazy val commonSettings = Seq(
   organizationName := "Haifeng Li",
   organizationHomepage := Some(url("http://haifengl.github.io/")),
   version := "2.6.0",
-  javacOptions in (Compile, compile) ++= Seq("-source", "1.8", "-target", "1.8", "-encoding", "UTF8", "-g:lines,vars,source", "-Xlint:unchecked"),
-  javacOptions in (Compile, doc) ++= Seq(
-    "-source", "1.8",
-    "-Xdoclint:none",
-    "--allow-script-in-comments",
-    "-doctitle", """Smile &mdash; Statistical Machine Intelligence and Learning Engine""",
-    "-bottom", """<script src="{@docRoot}/../../js/google-analytics.js" type="text/javascript"></script>"""
-    ),
-  libraryDependencies += "org.slf4j" % "slf4j-simple" % "1.7.30" % "test",
-  libraryDependencies += "junit" % "junit" % "4.13.1" % "test",
-  libraryDependencies += "com.novocode" % "junit-interface" % "0.11" % "test" exclude("junit", "junit-dep"),
-  scalaVersion := "2.13.4",
-  scalacOptions := Seq("-unchecked", "-deprecation", "-feature", "-encoding", "utf8", "-target:jvm-1.8"),
-  testOptions in Test := Seq(Tests.Argument(TestFrameworks.JUnit, "-a")),
   parallelExecution in Test := false,
   autoAPIMappings := true,
-  crossPaths := false,
-  autoScalaLibrary := false,
   publishTo := {
     val nexus = "https://oss.sonatype.org/"
     if (isSnapshot.value)
@@ -56,40 +40,124 @@ lazy val commonSettings = Seq(
   )
 )
 
-lazy val skipPublishSettings = commonSettings ++ Seq(
-  publish / skip := true
+lazy val javaSettings = commonSettings ++ Seq(
+  crossPaths := false,
+  autoScalaLibrary := false,
+  javacOptions in (Compile, compile) ++= Seq(
+    "-encoding", "UTF8",
+    "-g:lines,vars,source",
+    "-Xlint:deprecation",
+    "-Xlint:unchecked"
+  ),
+  javacOptions in (Compile, doc) ++= Seq(
+    "-Xdoclint:none",
+    "--allow-script-in-comments",
+    "-doctitle", """Smile &mdash; Statistical Machine Intelligence and Learning Engine""",
+    "-bottom", """<script src="{@docRoot}/../../js/google-analytics.js" type="text/javascript"></script>"""
+    ),
+  libraryDependencies ++= Seq(
+    "org.slf4j" % "slf4j-simple" % "1.7.30" % "test",
+    "junit" % "junit" % "4.13.1" % "test",
+    "com.novocode" % "junit-interface" % "0.11" % "test" exclude("junit", "junit-dep")
+  ),
+  testOptions in Test := Seq(Tests.Argument(TestFrameworks.JUnit, "-a"))
+)
+
+lazy val java8Settings = javaSettings ++ Seq(
+  javacOptions in (Compile, compile) ++= Seq(
+    "-source", "1.8",
+    "-target", "1.8"
+  ),
+  javacOptions in (Compile, doc) ++= Seq(
+    "-source", "1.8",
+  )
+)
+
+lazy val java15Settings = javaSettings ++ Seq(
+  javacOptions in (Compile, compile) ++= Seq(
+    "-source", "15",
+    "-target", "15",
+    "--enable-preview",
+    "-Xlint:preview"
+  ),
+  javacOptions in (Compile, doc) ++= Seq(
+    "-source", "15",
+    "--enable-preview"
+  )
+)
+
+lazy val scalaSettings = commonSettings ++ Seq(
+  crossPaths := true,
+  autoScalaLibrary := true,
+  scalaVersion := "2.13.4",
+  scalacOptions := Seq(
+    "-unchecked",
+    "-deprecation",
+    "-feature",
+    "-encoding", "utf8",
+    "-target:jvm-1.8"
+  ),
+  scalacOptions in (Compile, doc) ++= Seq(
+    "-groups",
+    "-implicits"
+  )
 )
 
 lazy val root = project.in(file("."))
-  .settings(skipPublishSettings: _*)
+  .settings(commonSettings: _*)
   .enablePlugins(JavaUnidocPlugin)
   .settings(
     unidocProjectFilter in (JavaUnidoc, unidoc) := inAnyProject -- inProjects(json, demo, scala, spark, shell)
   )
   .aggregate(core, data, io, math, mkl, nlp, plot, json, demo, scala, spark, shell)
 
-lazy val math = project.in(file("math")).settings(commonSettings: _*)
+lazy val math = project.in(file("math")).settings(java8Settings: _*)
 
-lazy val mkl = project.in(file("mkl")).settings(commonSettings: _*).dependsOn(math)
+lazy val mkl = project.in(file("mkl"))
+  .settings(java8Settings: _*)
+  .dependsOn(math)
 
-lazy val data = project.in(file("data")).settings(commonSettings: _*).dependsOn(math)
+lazy val data = project.in(file("data"))
+  .settings(java8Settings: _*)
+  .dependsOn(math)
 
-lazy val io = project.in(file("io")).settings(commonSettings: _*).dependsOn(data)
+lazy val io = project.in(file("io"))
+  .settings(java8Settings: _*)
+  .dependsOn(data)
 
-lazy val core = project.in(file("core")).settings(commonSettings: _*).dependsOn(data, math, io % "test")
+lazy val core = project.in(file("core"))
+  .settings(java8Settings: _*)
+  .dependsOn(data, math, io % "test")
 
-lazy val deep = project.in(file("deep")).settings(skipPublishSettings: _*)
+lazy val deep = project.in(file("deep"))
+  .settings(java8Settings: _*)
+  .settings(publish / skip := true)
 
-lazy val nlp = project.in(file("nlp")).settings(commonSettings: _*).dependsOn(core)
+lazy val nlp = project.in(file("nlp"))
+  .settings(java8Settings: _*)
+  .dependsOn(core)
 
-lazy val plot = project.in(file("plot")).settings(commonSettings: _*).dependsOn(core)
+lazy val plot = project.in(file("plot"))
+  .settings(java8Settings: _*)
+  .dependsOn(core)
 
-lazy val demo = project.in(file("demo")).settings(skipPublishSettings: _*).dependsOn(core, io, plot)
+lazy val demo = project.in(file("demo"))
+  .settings(java8Settings: _*)
+  .settings(publish / skip := true)
+  .dependsOn(core, io, plot)
 
-lazy val json = project.in(file("json")).settings(commonSettings: _*)
+lazy val json = project.in(file("json")).settings(scalaSettings: _*)
 
-lazy val scala = project.in(file("scala")).settings(commonSettings: _*).dependsOn(core, io, nlp, plot, json)
+lazy val scala = project.in(file("scala"))
+  .settings(scalaSettings: _*)
+  .dependsOn(core, io, nlp, plot, json)
 
-lazy val spark = project.in(file("spark")).settings(skipPublishSettings: _*).dependsOn(core, data, io % "test")
+lazy val spark = project.in(file("spark"))
+  .settings(scalaSettings: _*)
+  .settings(publish / skip := true)
+  .dependsOn(core, data, io % "test")
 
-lazy val shell = project.in(file("shell")).settings(skipPublishSettings: _*).dependsOn(demo, scala)
+lazy val shell = project.in(file("shell"))
+  .settings(scalaSettings: _*)
+  .settings(publish / skip := true)
+  .dependsOn(demo, scala)
